Enable error message and uiHandler

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FaceInfo</string>
+
+    <string name="server_url_hint">Введите Url сервера</string>
 </resources>
